update to conf files and dashboards

--- a/TA-search_profiling/local/commands.conf
+++ b/TA-search_profiling/local/commands.conf
@@ -16,3 +16,12 @@ supports_rawargs = false
 is_risky = false
 supports_multivalues = true
 passauth = true
+
+[searchparse]
+filename = boolparse.py
+streaming = true
+retainsevents = true
+overrides_timeorder = false
+supports_rawargs = false
+is_risky = false
+supports_multivalues = true
