--- a/TA-search_profiling/local/props.conf
+++ b/TA-search_profiling/local/props.conf
@@ -11,6 +11,7 @@ EXTRACT-splunkd_sessions = \s(?P<session_id>\w{32}+)\s
 
 [audittrail]
 EXTRACT-audit_index_extractions = audit_index_extract
+EXTRACT-user = user=(?<user>[^ ,]+)
 
 [stash]
 REPORT-summary_search = summary_search
