Moving things around for alpha

--- a/SA-search_profiling/default/app.conf
+++ b/SA-search_profiling/default/app.conf
@@ -10,7 +10,7 @@ version = 0.0.1
 
 [ui]
 is_visible = 1
-label = Data Dictionary
+label = Search Profiling
 docs_section_override = AddOns:released
 
 [package]
