--- a/TA-search_profiling/default/app.conf
+++ b/TA-search_profiling/default/app.conf
@@ -9,12 +9,12 @@ build = 1
 version = 0.0.1
 
 [ui]
-is_visible = 1
-label = Data Dictionary
+is_visible = 0
+label = Add-on Search Profiling
 docs_section_override = AddOns:released
 
 [package]
-id = TA-data-dictionary
+id = TA-search_profiling
 
 [triggers]
 reload.addon_builder = simple
