Clean up main search and searchparse command

--- a/TA-search_profiling/default/savedsearches.conf
+++ b/TA-search_profiling/default/savedsearches.conf
@@ -28,35 +28,21 @@ display.visualizations.type = custom
 enableSched = 1
 request.ui_dispatch_app = TA-search_profiling
 request.ui_dispatch_view = search
-search = (index=_audit action=search (info=granted search=*) OR info=completed) OR (index=_internal (sourcetype=scheduler component=SavedSplunker) OR (sourcetype=splunkd_access OR sourcetype=splunkd_ui_access uri_path="*/servicesNS/*/*/search/jobs/*")) \
+search = search = ((index=_audit action=search (info=granted search=*) OR info=completed) (search_type IN("Raw","Meta") OR info=completed) search_mode IN("Scheduled","Real-time","Subsearch","Dashboard","Ad-hoc") ) OR (index=_internal (sourcetype=scheduler component=SavedSplunker) OR (sourcetype=splunkd_access OR sourcetype=splunkd_ui_access uri_path="*/servicesNS/*/*/search/jobs/*")) \
     [| inputlookup search_hosts.csv] \
 | rex field=uri_path "/[^/]+/splunkd/__raw/servicesNS/(?<user>[^/]+)/(?<app>[^/]+)/search/jobs/(?<search_id>[^/\?]+)" \
 | rex field=search_id "subsearch_(?<subid>.+)_[^_]+" \
 | rex field=subid "subsearch_(?<subid>.+)_[^_]+" \
 | eval search_id=trim(search_id,"'") \
 | eval seid=coalesce(subid,search_id, sid) \
-| eventstats values(app) AS app_name by seid \
+| eventstats values(app) AS app by seid \
 | search sourcetype=audittrail \
-| rex ", search='(?<search_string>[\s\S]+)', autojoin='\d" \
-| fields _time, info, host, user, app_name, search_id, seid, search_string, savedsearch_name, api*, event_count, result_count, scan_count, exec_time, total_run_time \
-| foreach * \
-    [ eval <<FIELD>>=trim(<<FIELD>>,"'")] \
-| eval api_Start_Time=if(apiStartTime=="ZERO_TIME",0,round(strptime(apiStartTime,"%a %b %d %H:%M:%S %Y"))), api_End_Time=if(apiEndTime=="ZERO_TIME",exec_time,round(strptime(apiEndTime,"%a %b %d %H:%M:%S %Y"))) \
-| eval usesMacro=if(match(search_string,"`"),1,0) \
+| fields _time, info, user, app_name, search_*, seid, savedsearch_name, api*, event_count, result_count, scan_count, exec_time, total_run_time, uses*, key, idx, st \
 | expandmacro macro_field=usesMacro search_field=search_string output_field=search_string \
-| eval search_type=if(info=="granted",case(like(search_string,"| from%") OR like(search_string,"| tstats%") OR like(search_string,"| pivot%") OR like(search_string,"| mstats %"),"Meta",like(search_string,"|%"),"Generating",like(search_string,"pre%"),"Setup",1==1,"Raw"),NULL) \
-| eval search_mode=case(like(search_id,"SummaryDirector_%") OR like(savedsearch_name,"_ACCELERATE_%"),"Acceleration", match(search_id,"^(rt_)?md_.+"),"Metadata",like(search_id,"rt_%"),"Real-time",like(search_id,"scheduler_%"),"Scheduled",like(search_id,"ta_%"),"Typeahead",like(search_id,"subsearch_%"),"Subsearch", match(search_id,"_search\d+_"),"Dashboard",1==1,"Ad-hoc") \
-| search (search_type IN("Raw","Meta") OR info=completed) search_mode IN("Scheduled","Real-time","Subsearch","Dashboard","Ad-hoc") \
-| rex field=search_string max_match=1000 "index=\"?(?<idx>[a-zA-Z0-9_\*]+)(\s|\'|\"|\)|$)" \
-| rex field=search_string max_match=1000 "sourcetype=\"?(?<st>[a-zA-Z0-9_\*:]+)(\s|\'|\")" \
-| rex field=search_string "datamodel(:|=)\"?(?<dm>[^ ]+)\"? " \
-| rex field=search_string "pivot\s+(?<dm>\S+)" \
-| rex field=search_string "^\|?(\s+)?(?<prefix>[^ ]+)" \
 | eval status=if(info=="granted" AND (search_mode=="Scheduled" OR search_mode=="Ad-hoc" OR search_mode=="Dashboard" OR search_mode=="Subsearch"),case(isnull(idx) AND isnull(st),"BadSearch",match(idx,"\*") AND isnull(st),"StarIdxNoSourcetype",match(st,"\*") AND isnull(idx),"StarStNoIndex",match(st,"\*"),"StarSourcetype",match(idx,"\*"),"StarIdx", isnull(idx),"NoIndex",isnull(st),"NoSourceType",true(),"GoodSearch"),NULL) \
 | lookup datamodel_info.csv dm OUTPUTNEW data \
 | lookup user_data_access.csv user, info OUTPUT allowedData defaultData \
 | mvmatch mode=super index_field=idx st_field=st defaults=defaultData allowed=allowedData pattern_field=none list=none output_field=data \
-| rename info AS search_status, host AS search_host, app_name AS app \
 | rex mode=sed field=search_string "s/\\[[^\\]]+\]+/ /g" \
 | rex field=search_string "(?<base_search>search [^\|]+)" \
 | eval usesBool=if(match(base_search,"(NOT|OR)"),1,0) \
