--- a/TA-search_profiling/default/transforms.conf
+++ b/TA-search_profiling/default/transforms.conf
@@ -1,6 +1,55 @@
 [summary_search]
 CLEAN_KEYS = 0
 FORMAT = idx::$1 st::$2
-MV_ADD = 1
+MV_ADD = false
 REGEX = (\S+)@(\S+)
 SOURCE_KEY = data
+
+[summary_ds]
+CLEAN_KEYS = 0
+FORMAT = datasource::$1
+MV_ADD = false
+REGEX = (\S+)
+SOURCE_KEY = data
+
+[idx_extract]
+FORMAT = idx::$1
+MV_ADD = true
+REGEX = index=\"?([a-zA-Z0-9_\*\-]+)(\s|\'|\"|\)|$)
+SOURCE_KEY = search_string
+
+[st_extract]
+FORMAT = st::$1
+MV_ADD = true
+REGEX = sourcetype=\"?([a-zA-Z0-9_\*:\-]+)(\s|\'|\")?
+SOURCE_KEY = search_string
+
+[dm_extract]
+FORMAT = dm::$2
+REGEX = datamodel(:|=)\"?([^ ]+)\"?\s
+SOURCE_KEY = search_string
+
+[pivot_extract]
+FORMAT = dm::$1
+REGEX = \| pivot\s+(\S+)
+SOURCE_KEY = search_string
+
+[prefix_extract]
+FORMAT = search_prefix::$2
+REGEX = ^\|?(\s+)?([^ ]+)
+SOURCE_KEY = search_string
+
+[list_index_sourcetypes]
+batch_index_query = 0
+case_sensitive_match = 1
+filename = list_index_sourcetypes.csv
+
+[datasources]
+batch_index_query = 0
+case_sensitive_match = 1
+filename = datasources.csv
+
+[license_usage]
+batch_index_query = 0
+case_sensitive_match = 1
+filename = license_usage.csv
