Update rest calls for local server

--- a/TA-search_profiling/default/savedsearches.conf
+++ b/TA-search_profiling/default/savedsearches.conf
@@ -28,7 +28,7 @@ display.visualizations.type = custom
 enableSched = 1
 request.ui_dispatch_app = TA-search_profiling
 request.ui_dispatch_view = search
-search = search = ((index=_audit action=search (info=granted search=*) OR info=completed) (search_type IN("Raw","Meta") OR info=completed) search_mode IN("Scheduled","Real-time","Subsearch","Dashboard","Ad-hoc") ) OR (index=_internal (sourcetype=scheduler component=SavedSplunker) OR (sourcetype=splunkd_access OR sourcetype=splunkd_ui_access uri_path="*/servicesNS/*/*/search/jobs/*")) \
+search = ((index=_audit action=search (info=granted search=*) OR info=completed) (search_type IN("Raw","Meta") OR info=completed) search_mode IN("Scheduled","Real-time","Subsearch","Dashboard","Ad-hoc") ) OR (index=_internal (sourcetype=scheduler component=SavedSplunker) OR (sourcetype=splunkd_access OR sourcetype=splunkd_ui_access uri_path="*/servicesNS/*/*/search/jobs/*")) \
     [| inputlookup search_hosts.csv] \
 | rex field=uri_path "/[^/]+/splunkd/__raw/servicesNS/(?<user>[^/]+)/(?<app>[^/]+)/search/jobs/(?<search_id>[^/\?]+)" \
 | rex field=search_id "subsearch_(?<subid>.+)_[^_]+" \
@@ -65,7 +65,7 @@ display.visualizations.type = custom
 enableSched = 1
 request.ui_dispatch_app = TA-search_profiling
 request.ui_dispatch_view = search
-search = | rest /services/datamodel/model \
+search = | rest splunk_server=local /services/datamodel/model \
 | eval description=mvindex(description,0) \
 | spath input=description path=objects{0} output=francis \
 | rex field=francis "\"search\":\"(?<search_string>[^\"]+)" \
@@ -94,14 +94,14 @@ display.visualizations.show = 0
 enableSched = 1
 request.ui_dispatch_app = TA-search_profiling
 request.ui_dispatch_view = search
-search = | rest /services/authentication/users \
+search = | restsplunk_server=local /services/authentication/users \
 | extract reload=true \
 | table title , roles \
 | mvexpand roles \
 | rename title as user, roles as role\
 | append [|makeresults count=2 | eval x=1 | accum x | eval user=if(x==1,"splunk-system-user","nobody"), role=if(x==1,"splunk-system-role","admin") | table user role]\
 | join Role type=left max=0 \
-    [| rest /services/authorization/roles \
+    [| rest splunk_server=local /services/authorization/roles \
     | table title srchIndexesAllowed srchIndexesDefault \
     | rename title as role ] \
 | eval srchIndexesDefault=split(srchIndexesDefault,"\
@@ -158,4 +158,4 @@ display.visualizations.show = 0
 enableSched = 1
 request.ui_dispatch_app = TA-search_profiling
 request.ui_dispatch_view = search
-search = |rest /services/shcluster/member/members | rename label AS host| table host | append [|rest /services/server/info | table splunk_server | rename splunk_server AS host] | outputlookup search_hosts.csv
+search = |rest splunk_server=local /services/shcluster/member/members | rename label AS host| table host | append [|rest splunk_server=local /services/server/info | table splunk_server | rename splunk_server AS host] | outputlookup search_hosts.csv
