--- a/TA-search_profiling/default/commands.conf
+++ b/TA-search_profiling/default/commands.conf
@@ -1,5 +1,6 @@
 [mvmatch]
 filename = mvmatch.py
+local = true
 streaming = true
 retainsevents = true
 overrides_timeorder = false
@@ -9,6 +10,7 @@ supports_multivalues = true
 
 [expandmacro]
 filename = expandmacro.py
+local = true
 streaming = true
 retainsevents = true
 overrides_timeorder = false
@@ -19,6 +21,7 @@ passauth = true
 
 [searchparse]
 filename = boolparse.py
+local = true
 streaming = true
 retainsevents = true
 overrides_timeorder = false
