Update mvmatch, user list search

--- a/TA-search_profiling/default/commands.conf
+++ b/TA-search_profiling/default/commands.conf
@@ -1,6 +1,7 @@
 [mvmatch]
 filename = mvmatch.py
 local = true
+chunked=true
 streaming = true
 retainsevents = true
 overrides_timeorder = false
@@ -11,6 +12,7 @@ supports_multivalues = true
 [expandmacro]
 filename = expandmacro.py
 local = true
+chunked=true
 streaming = true
 retainsevents = true
 overrides_timeorder = false
@@ -22,6 +24,7 @@ passauth = true
 [searchparse]
 filename = boolparse.py
 local = true
+chunked=true
 streaming = true
 retainsevents = true
 overrides_timeorder = false
