--- a/TA-search_profiling/default/savedsearches.conf
+++ b/TA-search_profiling/default/savedsearches.conf
@@ -100,7 +100,7 @@ search = | rest splunk_server=local /services/authentication/users \
 | mvexpand roles \
 | rename title as user, roles as role\
 | append [|makeresults count=2 | eval x=1 | accum x | eval user=if(x==1,"splunk-system-user","nobody"), role=if(x==1,"splunk-system-role","admin") | table user role]\
-| join Role type=left max=0 \
+| join role type=left max=0 \
     [| rest splunk_server=local /services/authorization/roles \
     | table title srchIndexesAllowed srchIndexesDefault \
     | rename title as role ] \
@@ -110,13 +110,11 @@ search = | rest splunk_server=local /services/authentication/users \
 | stats values(srchIndexesDefault) AS srchIndexesDefault values(srchIndexesAllowed) AS srchIndexesAllowed values(role) AS role by user \
 | append \
     [| inputlookup list_index_sourcetypes.csv ] \
-| eventstats values(index) AS index, values(data) AS data \
+| eventstats values(data) AS data \
 | search user=* \
-| mvmatch pattern_field=srchIndexesAllowed list=index output_field="srchIndexesAllowed" \
-| mvmatch pattern_field=srchIndexesDefault list=index output_field="srchIndexesDefault"\
-| mvmatch mode=x pattern_field=srchIndexesDefault list=data output_field="defaultData"\
-| mvmatch mode=x pattern_field=srchIndexesAllowed list=data output_field="allowedData"\
-| table user role defaultData allowedData\
+| mvmatch pattern_field=srchIndexesAllowed output_field="allowedData" mode=y st_field=data \
+| mvmatch pattern_field=srchIndexesDefault output_field="defaultData" mode=y st_field=data \
+| table user role defaultData allowedData \
 | eval info="granted"\
 | outputlookup user_data_access.csv
 
