--- a/TA-search_profiling/default/savedsearches.conf
+++ b/TA-search_profiling/default/savedsearches.conf
@@ -1,7 +1,9 @@
 [Index Sourcetypes - Lookup Gen]
 action.email.useNSSubject = 1
 alert.track = 0
-cron_schedule = */10 * * * *
+dispatch.earliest_time = -24h@h
+dispatch.latest_time = @h
+cron_schedule = */30 * * * *
 dispatch.earliest_time = 0
 display.general.timeRangePicker.show = 0
 display.general.type = statistics
