--- a/SA-search_profiling/default/transforms.conf
+++ b/SA-search_profiling/default/transforms.conf
@@ -18,4 +18,4 @@ fields_list = _key,asset_id,asset_type,title,description,owner,use_cases
 [use_cases]
 collection = use_cases
 external_type = kvstore
-fields_list = _key,title,description,owner,value,value_description
+fields_list = _key,title,description,category,owner,value,value_description,app
