--- a/TA-search_profiling/default/transforms.conf
+++ b/TA-search_profiling/default/transforms.conf
@@ -1,15 +1,15 @@
 [summary_search]
 CLEAN_KEYS = 0
 FORMAT = idx::$1 st::$2
-MV_ADD = false
-REGEX = (\S+)@(\S+)
+MV_ADD = 1
+REGEX = (\S+)@([^\n]+)
 SOURCE_KEY = data
 
 [summary_ds]
 CLEAN_KEYS = 0
 FORMAT = datasource::$1
 MV_ADD = false
-REGEX = (\S+)
+REGEX = ([^\n]+)
 SOURCE_KEY = data
 
 [summary_role]
