--- a/TA-search_profiling/default/savedsearches.conf
+++ b/TA-search_profiling/default/savedsearches.conf
@@ -71,8 +71,8 @@ search = | rest splunk_server=local /services/datamodel/model \
 | eval description=mvindex(description,0) \
 | spath input=description path=objects{0} output=francis \
 | rex field=francis "\"search\":\"(?<search_string>[^\"]+)" \
-| rex field=search_string max_match=1000 "index=\"?(?<idx>[a-zA-Z0-9_\*]+)(\s|\'|\"|$)" \
-| rex field=search max_match=1000 "sourcetype=\"?(?<st>[a-zA-Z0-9_\*:]+)(\s|\'|\")" \
+| rex field=search_string max_match=1000 "index=\"?(?<idx>[a-zA-Z0-9_\*\-]+)(\s|\'|\"|$|\))" \
+| rex field=search max_match=1000 "sourcetype=\"?(?<st>[a-zA-Z0-9_\*:]+)(\s|\'|\"|\)|$)" \
 | rename eai:userName AS user, title as dm \
 | lookup user_data_access.csv user OUTPUT allowedData defaultData \
 | eval usesMacro=if(match(search_string,"`"),1,0) \
