Updates with User Views, Icons

--- a/TA-search_profiling/default/savedsearches.conf
+++ b/TA-search_profiling/default/savedsearches.conf
@@ -70,9 +70,9 @@ request.ui_dispatch_view = search
 search = | rest splunk_server=local /services/datamodel/model \
 | eval description=mvindex(description,0) \
 | spath input=description path=objects{0} output=francis \
-| rex field=francis "\"search\":\"(?<search_string>[^\"]+)" \
-| rex field=search_string max_match=1000 "index=\"?(?<idx>[a-zA-Z0-9_\*\-]+)(\s|\'|\"|$|\))" \
-| rex field=search max_match=1000 "sourcetype=\"?(?<st>[a-zA-Z0-9_\*:]+)(\s|\'|\"|\)|$)" \
+| rex field=francis "\"search\":\"(?<search_string>.+?)\",\"" \
+| rex field=search_string max_match=1000 "index=(\\\\\")?(?<idx>[a-zA-Z0-9_\*\-]+)(\s|\'|\\\\\"|$|\))" \
+| rex field=search_string max_match=1000 "sourcetype=\"?(?<st>[a-zA-Z0-9_\*:\-\ ]+)(\s|\'|\"|\)|$)"  \
 | rename eai:userName AS user, title as dm \
 | lookup user_data_access.csv user OUTPUT allowedData defaultData \
 | eval usesMacro=if(match(search_string,"`"),1,0) \
