--- a/SA-search_profiling/default/savedsearches.conf
+++ b/SA-search_profiling/default/savedsearches.conf
@@ -1,10 +1,36 @@
 [License Usage by Datasource - Lookup Gen]
 alert.suppress = 0
-alert.track = 1
+alert.track = 0
 counttype = number of events
 cron_schedule = 0 1 * * *
-disabled = 1
-dispatch.earliest_time = -1d
+disabled = 0
+dispatch.earliest_time = -1d@d
+dispatch.latest_time = @d
+display.general.type = statistics
+display.page.search.mode = fast
+display.page.search.tab = statistics
+enableSched = 1
+quantity = 0
+relation = greater than
+request.ui_dispatch_app = SA-search_profiling
+request.ui_dispatch_view = search
+search = index=_internal sourcetype=splunkd component=LicenseUsage type=Usage \
+| bin _time span=1d \
+| eval idx=if(idx=="default","main",idx) \
+| eval data=idx."@".st, day=round((relative_time(now(),"@d")-_time)/86400)\
+| stats sum(b) AS bytes by data \
+| eval day=1 \
+| append [| inputlookup license_usage.csv  | untable data day bytes | eval day=day+1] \
+| chart values(bytes) over data by day | fillnull value=0 | table data 1 2 3 4 5 6 7 \
+| outputlookup license_usage.csv
+
+[License Usage Summary - Lookup Gen]
+alert.suppress = 0
+alert.track = 0
+counttype = number of events
+cron_schedule = 30 1 * * *
+disabled = 0
+dispatch.earliest_time = -30d@d
 dispatch.latest_time = now
 display.general.type = statistics
 display.page.search.mode = fast
@@ -12,13 +38,8 @@ display.page.search.tab = statistics
 enableSched = 1
 quantity = 0
 relation = greater than
-request.ui_dispatch_app = search_profiling_basic
+request.ui_dispatch_app = SA-search_profiling
 request.ui_dispatch_view = search
-search = index=_internal source=*license_usage* type=Usage \
-| bin _time span=1d \
-| eval idx=if(idx=="default","main",idx) \
-| eval data=idx."@".st, day=round((relative_time(now(),"@d")-_time)/86400)\
-| stats sum(b) AS bytes by data \
-| eval day=1 \
-| append [| inputlookup license_usage.csv  | untable data day bytes | eval day=day+1] \
-| chart values(bytes) over data by day | fillnull value=0 | table data 1 2 3 4 5 6 7
+search = index=_internal sourcetype=splunkd component=LicenseUsage type=RolloverSummary \
+| timechart span=1d sum(b) AS bytes \
+| outputlookup lic_usage_summary.csv
