--- a/TA-search_profiling/default/commands.conf
+++ b/TA-search_profiling/default/commands.conf
@@ -1,7 +1,7 @@
 [mvmatch]
 filename = mvmatch.py
 local = true
-chunked=true
+# chunked=true
 streaming = true
 retainsevents = true
 overrides_timeorder = false
@@ -12,7 +12,7 @@ supports_multivalues = true
 [expandmacro]
 filename = expandmacro.py
 local = true
-chunked=true
+# chunked=true
 streaming = true
 retainsevents = true
 overrides_timeorder = false
@@ -24,7 +24,7 @@ passauth = true
 [searchparse]
 filename = boolparse.py
 local = true
-chunked=true
+# chunked=true
 streaming = true
 retainsevents = true
 overrides_timeorder = false
